--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,11 @@
         </div>
       </section>
       <br>
-      <span>Site under construction...</span>
+	<section>
+		<div><b>Email</b> - <u>emilarro@protonmail.com</u> <i>(I will soon host my own mail server)</i></div>
+		<div><b>Matrix</b> - <u>@emlar:matrix.org</u></div> </br>
+		</br>
+	</section>
     </main>
 </center>
   </body>
