--- a/home/index.html
+++ b/home/index.html
@@ -4,7 +4,7 @@
     <title>EEmiil</title>
     <html lang="en">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="main.css"/>
+    <link rel="stylesheet" href="../main.css"/>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
@@ -16,7 +16,7 @@
       <section>
         <div>
           <br>
-          <span> - <a href="contact.html">Contact</a> - <a href="photography.html">Photography</a> - <a href="blog.html">Blog</a> - </span>
+          <span> - <a href="../contact/index.html">Contact</a> - <a href="../photography/index.html">Photography</a> - <a href="../blog/blog.html">Blog</a> - </span>
         </div>
       </section>
       <section>
