--- a/photography.html
+++ b/photography.html
@@ -1,7 +1,8 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
-    <title>EEmiil</title>
+    <meta>
+    <title>EEmiil - Photography</title>
     <html lang="en">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="main.css"/>
@@ -10,7 +11,7 @@
   <body>
 <center>
     <header>
-      <h2> <a class="Names" href="index.html"><b><u>EE</u>miil</u></b></a><h2>
+      <h2><b><a class="Names" href="index.html"><u>EE</u>miil</a> - Photography</b></h2>
     </header>
     <main>
       <section>
@@ -19,19 +20,9 @@
           <span> - <a href="contact.html">Contact</a> - <a href="photography.html">Photography</a> - <a href="blog.html">Blog</a> - </span>
         </div>
       </section>
-      <section>
-        <br>
-        <p>
-          My website where I keep my photohraphy portfolio and blog.
-        </p>
-      </section>
-      <section>
-        <br>
-        <p>
-         The site is not ready yet! Go away!
-        </p>
-      </section>
-     </main>
-</center>
+      <br>
+      <span>Site under construction...</span>
+    </main>
   </body>
+</center>
 </html>
