--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <title>EEmiil</title>
     <html lang="en">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="main.css"/>
+    <link rel="stylesheet" href="./css/main.css"/>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
 <center>
     <header>
-      <h2> <a class="Names" href="index.html"><b><u>EE</u>miil</u></b></a><h2>
+      <h2> <a class="Names" href="./index.html"><b><u>EE</u>miil</u></b></a><h2>
     </header>
     <main>
       <section>
         <div>
           <br>
-          <span> - <a href="contact.html">Contact</a> - <a href="photography.html">Photography</a> - <a href="blog.html">Blog</a> - </span>
+          <span> - <a href="./contact">Contact</a> - <a href="./photography">Photography</a> - <a href="./blog">Blog</a> - </span>
         </div>
       </section>
       <section>
