--- a/photography/index.html
+++ b/photography/index.html
@@ -5,19 +5,19 @@
     <title>EEmiil - Photography</title>
     <html lang="en">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="main.css"/>
+    <link rel="stylesheet" href="../css/main.css"/>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
 <center>
     <header>
-      <h2><b><a class="Names" href="index.html"><u>EE</u>miil</a> - Photography</b></h2>
+      <h2><b><a class="Names" href="../index.html"><u>EE</u>miil</a> - Photography</b></h2>
     </header>
     <main>
       <section>
         <div>
           <br>
-          <span> - <a href="contact.html">Contact</a> - <a href="photography.html">Photography</a> - <a href="blog.html">Blog</a> - </span>
+          <span> - <a href="/contact/">Contact</a> - <a href="/photography/">Photography</a> - <a href="/blog/">Blog</a> - </span>
         </div>
       </section>
       <br>
