--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html>
   <head>
-    <title>EEmiil</title>
+    <title>emlar.xyz</title>
     <html lang="en">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/main.css"/>
@@ -10,7 +10,7 @@
   <body>
 <center>
     <header>
-      <h2> <a class="Names" href="./index.html"><b><u>EE</u>miil</u></b></a><h2>
+      <h2> <a class="Names" href="./index.html"><b>Emlar.xyz</b></a><h2>
     </header>
     <main>
       <section>
