--- a/contact/index.html
+++ b/contact/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta>
-    <title>EEmiil - Contact</title>
+    <title>Emlar - Contact</title>
     <html lang="en">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../css/main.css"/>
@@ -11,7 +11,7 @@
   <body>
 <center>
     <header>
-      <h2><b><a class="Names" href="../index.html"><u>EE</u>miil</a> - Contact</b></h2>
+      <h2><b><a class="Names" href="../index.html">Emlar</a> - Contact</b></h2>
     </header>
     <main>
       <section>
@@ -22,7 +22,7 @@
       </section>
       <br>
 	<section>
-		<div><b>Email</b> - <u>emilarro@protonmail.com</u> <i>(I will soon host my own mail server)</i></div>
+		<div><b>Email</b> - <u>emilarro@protonmail.com</u></div>
 		<div><b>Matrix</b> - <u>@emlar:matrix.org</u></div> </br>
 		</br>
 	</section>
