--- a/photography/index.html
+++ b/photography/index.html
@@ -12,7 +12,7 @@
   <body>
 <center>
     <header>
-      <h2><b><a class="Names" href="../index.html"><Emlar</a> - Photography</b></h2>
+      <h2><b><a class="Names" href="../index.html">Emlar</a> - Photography</b></h2>
     </header>
     <main>
       <section>
