--- a/photography/article1/index.html
+++ b/photography/article1/index.html
@@ -5,27 +5,27 @@
     <title>Emlar - Photography</title>
     <html lang="en">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/main.css"/>
+    <link rel="stylesheet" href="/css/main.css"/>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
 <center>
     <header>
-      <h2><b><a class="Names" href="../index.html">Emlar</a> - Photography</b></h2>
+      <h2><b><a class="Names" href="/index.html">Emlar</a> - Photography</b></h2>
     </header>
     <main>
       <section>
         <div>
           <br>
-          <span> - <a href="/contact/">Contact</a> - <a href="/photography/">Photography</a> - <a href="/blog/">Blog</a> - </span>
+          <span> - <a href="/contact/">Contact</a> - <a href="/photography/">Photography</a> - <a href="/blog/">Blog</a> - </sp>
         </div>
       </section>
       <br>
-	<section>
-		<div><a href="article1/">Photo Project "Lonely Places"</a></div>
-	</section>
+        <section>
+		<div>photo1</div>
+		<div>photo2</div>
+        </section>
     </main>
   </body>
 </center>
 </html>
-
