--- a/photography/index.html
+++ b/photography/index.html
@@ -22,7 +22,9 @@
       </section>
       <br>
 	<section>
-		<div><a href="article1/">Photo Project "Lonely Places"</a></div>
+	<ul>
+		<div><li><a href="lonely-places/">Photo Project "Lonely Places"</a></li></div>
+	</ul>
 	</section>
     </main>
   </body>
