--- a/photography/lonely-places/index.html
+++ b/photography/lonely-places/index.html
@@ -25,6 +25,7 @@
 		<p>
 		This is a photo project I originally did for school. The goal was to photograph lonely places in Tallinn on film. All of the photos were shot on 35mm film in 2020.
 		</p>
+		<div>PHOTOS NOT ON GITHUB!!! GO SEE EMLAR.xyz</div>
 		<br>
 		<img src="/fotod/maja-lasnamael.jpg alt="A house"><br>
 		<div>A house</div>
