--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <title>emlar.xyz</title>
     <html lang="en">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/main.css"/>
-    <link rel="icon" type="image/x-icon" href="emlar.png">
+    <link rel="shortcut icon" type="image/png" href="emlar2.png"/>
+    <link rel="stylesheet" href="/css/main.css"/>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
 <center>
+<br>
     <header>
-      <h2> <a class="Names" href="./index.html"><b>Emlar.xyz</b></a><h2>
+      <h2> <a class="Names" href="/"><b>Emlar.xyz</b></a><h2>
     </header>
     <main>
       <section>
@@ -23,14 +24,10 @@
       <section>
         <br>
         <p>
-          My website where I keep my photohraphy portfolio and blog.
-        </p>
+	  A small website for my photograpy and blog. 
+	  <br>
+	</p>
       </section>
-      <section>
-        <br>
-        <p>
-         The site is not ready yet! Go away!
-        </p>
       </section>
      </main>
 </center>
