--- a/photography/index.html
+++ b/photography/index.html
@@ -5,13 +5,15 @@
     <title>Emlar - Photography</title>
     <html lang="en">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/main.css"/>
+    <link rel="shortcut icon" type="image/png" href="/emlar2.png"/>
+    <link rel="stylesheet" href="/css/main.css"/>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
 <center>
+<br>
     <header>
-      <h2><b><a class="Names" href="../index.html">Emlar</a> - Photography</b></h2>
+      <h2><b><a class="Names" href="/">Emlar</a> - Photography</b></h2>
     </header>
     <main>
       <section>
@@ -20,10 +22,10 @@
           <span> - <a href="/contact/">Contact</a> - <a href="/photography/">Photography</a> - <a href="/blog/">Blog</a> - </span>
         </div>
       </section>
-      <br>
+	<br>
 	<section>
 	<ul>
-		<div><li><a href="lonely-places/">Photo Project "Lonely Places"</a></li></div>
+		<div><li><a href="lonely-places/">Photo Project "Lonely Places"</a></li><div>
 	</ul>
 	</section>
     </main>
