--- a/photography/lonely-places/index.html
+++ b/photography/lonely-places/index.html
@@ -5,13 +5,15 @@
     <title>Emlar - Photography</title>
     <html lang="en">
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/png" href="/emlar2.png"/>
     <link rel="stylesheet" href="/css/main.css"/>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
 <center>
     <header>
-      <h2><b><a class="Names" href="/index.html">Emlar</a> - Photography</b></h2>
+<br>
+      <h2><b><a class="Names" href="/">Emlar</a> - Photography</b></h2>
     </header>
     <main>
       <section>
@@ -24,28 +26,29 @@
         <section>
 		<p>
 		This is a photo project I originally did for school. The goal was to photograph lonely places in Tallinn on film. All of the photos were shot on 35mm film in 2020.
-		</p>
-		<div>PHOTOS NOT ON GITHUB!!! GO SEE EMLAR.xyz</div>
 		<br>
-		<img src="/fotod/maja-lasnamael.jpg alt="A house"><br>
+		 As a part of the project I learned to develop film and make darkroom prints. I took a lot more photos but here is a selection.
+		</p>
+		<br>
+		<img src="/fotod/maja-lasnamael.jpg" alt="[A house]" class="Photos"><br>
 		<div>A house</div>
 		<br>
-		<img src="/fotod/autod-ja-hauakivid.jpg alt="Cars and tombstones"><br>
+		<img src="/fotod/autod-ja-hauakivid.jpg" alt="[Cars and tombstones]" class="Photos"><br>
 		<div>Cars and tombstones</div>
 		<br>
-		<img src="/fotod/polenud-maja.jpg alt="A burnt house"><br>
+		<img src="/fotod/polenud-maja.jpg" alt="[A burnt house]" class="Photos"><br>
 		<div>A burnt house</div>
 		<br>
-		<img src="/fotod/uksikmaja.jpg alt="A lonely house"><br>
+		<img src="/fotod/uksikmaja.jpg" alt="[A lonely house]" class="Photos"><br>
 		<div>A lonely house</div>
 		<br>
-		<img src="/fotod/pizza.jpg alt="Pizza"><br>
+		<img src="/fotod/pizza.jpg" alt="[Pizza]" class="Photos"><br>
 		<div>New York Pizza</div>
 		<br>
-		<img src="/fotod/istuja.jpg alt="A woman in an empty cafe"><br>
+		<img src="/fotod/istuja.jpg" alt="[A woman in an empty cafe]" class="Photos""><br>
 		<div>A woman in an empty cafe</div>
 		<br>
-		<img src="/fotod/varav.jpg alt="A gate"><br>
+		<img src="/fotod/varav.jpg" alt="[A gate]" class="Photos"><br>
 		<div>A gate</div>
 		<br>
 	</section>
