"photos not on github" disclaimer added
go to emlar.xyz to see photos!

--- a/photography/lonely-places/index.html
+++ b/photography/lonely-places/index.html
@@ -30,6 +30,8 @@
 		 As a part of the project I learned to develop film and make darkroom prints. I took a lot more photos but here is a selection.
 		</p>
 		<br>
+		<h1><b>PHOTOS NOT ON GITHUB!!! GO TO EMLAR.XYZ</b></h1>
+		<br>
 		<img src="/fotod/maja-lasnamael.jpg" alt="[A house]" class="Photos"><br>
 		<div>A house</div>
 		<br>
