--- a/index.html
+++ b/index.html
@@ -9,27 +9,28 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
-<center>
-<br>
+    <br>
     <header>
       <h2> <a class="Names" href="/"><b>Emlar.xyz</b></a><h2>
     </header>
     <main>
-      <section>
-        <div>
-          <br>
-          <span> - <a href="./contact">Contact</a> - <a href="./photography">Photography</a> - <a href="./blog">Blog</a> - </span>
-        </div>
-      </section>
-      <section>
+        <div class="menu"><br> - <a href="./contact">Contact</a> - <a href="./photography">Photography</a> - <a href="./blog">Blog</a> - </div>
         <br>
         <p>
-	  A small website for my photograpy and blog. 
-	  <br>
+	I am a GNU/Linux and free software enthusiast and a beginner photographer and programmer. <br>
+	This site is for sharing my photos and some ideas or thoughts in my blog. 
 	</p>
-      </section>
-      </section>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<a href="https://hotlinewebring.club/emlar/previous" class="wr2"><<</a><a href="https://hotlinewebring.club" class="wr">Hotline Webring</a><a href="https://hotlinewebring.club/emlar/next" class="wr2">>></a>
      </main>
-</center>
   </body>
 </html>
