--- a/photography/lonely-places/index.html
+++ b/photography/lonely-places/index.html
@@ -30,28 +30,26 @@
 		 As a part of the project I learned to develop film and make darkroom prints. I took a lot more photos but here is a selection.
 		</p>
 		<br>
-		<h1><b>PHOTOS NOT ON GITHUB!!! GO TO EMLAR.XYZ</b></h1>
-		<br>
 		<img src="/fotod/maja-lasnamael.jpg" alt="[A house]" class="Photos"><br>
-		<div>A house</div>
+		<br>
 		<br>
 		<img src="/fotod/autod-ja-hauakivid.jpg" alt="[Cars and tombstones]" class="Photos"><br>
-		<div>Cars and tombstones</div>
+		<br>
 		<br>
 		<img src="/fotod/polenud-maja.jpg" alt="[A burnt house]" class="Photos"><br>
-		<div>A burnt house</div>
+		<br>
 		<br>
 		<img src="/fotod/uksikmaja.jpg" alt="[A lonely house]" class="Photos"><br>
-		<div>A lonely house</div>
+		<br>
 		<br>
 		<img src="/fotod/pizza.jpg" alt="[Pizza]" class="Photos"><br>
-		<div>New York Pizza</div>
 		<br>
-		<img src="/fotod/istuja.jpg" alt="[A woman in an empty cafe]" class="Photos""><br>
-		<div>A woman in an empty cafe</div>
+		<br>
+		<img src="/fotod/istuja.jpg" alt="[A woman in an empty cafe]" class="Photos"><br>
+		<br>
 		<br>
 		<img src="/fotod/varav.jpg" alt="[A gate]" class="Photos"><br>
-		<div>A gate</div>
+		<br>
 		<br>
 	</section>
 	<section>
