--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="/css/main.css"/>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
-  <body>
-    <br>
+  <body>    
     <header>
-      <h2> <a class="Names" href="/"><b>Emlar.xyz</b></a><h2>
+      <h2><br> <a class="Names" href="/"><b>Emlar.xyz</b></a><h2>
     </header>
     <main>
         <div class="menu"><br> - <a href="./contact">Contact</a> - <a href="./photography">Photography</a> - <a href="./blog">Blog</a> - </div>
@@ -30,7 +29,6 @@
 <br>
 <br>
 <br>
-<a href="https://hotlinewebring.club/emlar/previous" class="wr2"><<</a><a href="https://hotlinewebring.club" class="wr">Hotline Webring</a><a href="https://hotlinewebring.club/emlar/next" class="wr2">>></a>
      </main>
-  </body>
+   </body>
 </html>
