New design for site
completely new design for the site. i made 3 different color themes in css.  they can be changed by changing the variables

--- a/contact/index.html
+++ b/contact/index.html
@@ -10,19 +10,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
-<br>
-    <header>
-      <h2><b><a class="Names" href="/">Emlar</a> - Contact</b></h2>
-    </header>
     <main>
-      <section>
-        <div>
-          <br>
-          <span> - <a href="/contact">Contact</a> - <a href="/photography">Photography</a> - <a href="/blog">Blog</a> - </span>
-        </div>
-      </section>
-      <br>
-	<section>
+		<div class="paths-s">
+			<span class="path"><a class="home-link" href="/photography/">photography</a></span><br>
+			<span class="path"><a class="home-link" href="/contact/">contact</a></span><br>
+			<span class="path"><a class="home-link" href="/blog/">blog</a></span><br>
+		</div>
+		<br>
+		<div class="Names"><a href="/" class=".Names"<b>Emlar.xyz</b></a> - Contact </div>
+		<br><br><br>
+	<section class="list">
 		<div><b>Email</b> - <u>emilarro@protonmail.com</u></div>
 		<div><b>Github</b> - <a href="https://github.com/emilarr">Emilarr</a></div>
 		<div><b>Matrix</b> - <u>@emlar:matrix.org</u></div> </br>
