--- a/index.html
+++ b/index.html
@@ -4,31 +4,28 @@
     <title>emlar.xyz</title>
     <html lang="en">
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/png" href="emlar2.png"/>
-    <link rel="stylesheet" href="/css/main.css"/>
+    <!-- NEW LOGO NECESSARY <link rel="shortcut icon" type="image/png" href="emlar2.png"/> -->
+    <link rel="stylesheet" href="css/main.css"/>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
-  <body>    
-    <header>
-      <h2><br> <a class="Names" href="/"><b>Emlar.xyz</b></a><h2>
-    </header>
-    <main>
-        <div class="menu"><br> - <a href="./contact">Contact</a> - <a href="./photography">Photography</a> - <a href="./blog">Blog</a> - </div>
-        <br>
-        <p>
-	I am a GNU/Linux and free software enthusiast and a beginner photographer and programmer. <br>
-	This site is for sharing my photos and some ideas or thoughts in my blog. 
-	</p>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-     </main>
-   </body>
+  <body>
+	<main class="home">
+		<div class="paths">
+			<span class="path"><a class="home-link" href="photography/">photography</a></span><br>
+			<span class="path"><a class="home-link" href="contact/">contact</a></span><br>
+			<span class="path"><a class="home-link" href="blog/">blog</a></span><br>
+		</div>
+
+		<h1 class="home-h1"><a class="home-link" href="#">EMLAR.xyz</a></h1>
+	
+		<footer class="home-f">
+
+			<div><p>I am a GNU/Linux and free software enthusiast and a beginner photographer and programmer.</p></div>
+			<div><p>This site is for sharing my photos and some ideas or thoughts in my blog. </p></div>
+
+		</footer>
+
+	
+	</main>
+  </body>
 </html>
