--- a/photography/index.html
+++ b/photography/index.html
@@ -6,25 +6,22 @@
     <html lang="en">
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="/emlar2.png"/>
-    <link rel="stylesheet" href="/css/main.css"/>
+    <link rel="stylesheet" href="../css/main.css"/>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
-<br>
-    <header>
-      <h2><b><a class="Names" href="/">Emlar</a> - Photography</b></h2>
-    </header>
     <main>
-      <section>
-        <div>
-          <br>
-          <span> - <a href="/contact/">Contact</a> - <a href="/photography/">Photography</a> - <a href="/blog/">Blog</a> - </span>
-        </div>
-      </section>
+		<div class="paths-s">
+			<span class="path"><a class="home-link" href="/photography/">photography</a></span><br>
+			<span class="path"><a class="home-link" href="/contact/">contact</a></span><br>
+			<span class="path"><a class="home-link" href="/blog/">blog</a></span><br>
+		</div>
 	<br>
+		<div class="Names"><a href="/" class=".Names"<b>Emlar.xyz</b></a> - Photography </div>
+		<br><br><br>
 	<section>
-	<ul>
-		<div><li><a href="lonely-places/">Photo Project "Lonely Places"</a></li><div>
+	<ul class="list">
+		<li><a href="lonely-places/">Photo Project "Lonely Places"</a></li>
 	</ul>
 	</section>
     </main>
