--- a/photography/lonely-places/index.html
+++ b/photography/lonely-places/index.html
@@ -10,25 +10,23 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
-<center>
-    <header>
-<br>
-      <h2><b><a class="Names" href="/">Emlar</a> - Photography</b></h2>
-    </header>
     <main>
-      <section>
-        <div>
-          <br>
-          <span> - <a href="/contact/">Contact</a> - <a href="/photography/">Photography</a> - <a href="/blog/">Blog</a> - </sp>
-        </div>
-      </section>
-      <br>
+		<div class="paths-s">
+			<span class="path"><a class="home-link" href="/photography/">photography</a></span><br>
+			<span class="path"><a class="home-link" href="/contact/">contact</a></span><br>
+			<span class="path"><a class="home-link" href="/blog/">blog</a></span><br>
+		</div>
+	    <br>
+		<div class="Names"><a href="/" class=".Names"<b>Emlar.xyz</b></a> - Photography </div>
+		<br><br><br> 
         <section>
+		<article>
 		<p>
 		This is a photo project I originally did for school. The goal was to photograph lonely places in Tallinn on film. All of the photos were shot on 35mm film in 2020.
 		<br>
 		 As a part of the project I learned to develop film and make darkroom prints. I took a lot more photos but here is a selection.
 		</p>
+		</article>
 		<br>
 		<img src="/fotod/maja-lasnamael.jpg" alt="[A house]" class="Photos"><br>
 		<br>
@@ -52,6 +50,7 @@
 		<br>
 		<br>
 	</section>
+	<section>
 	<br>
 	<br>
 	<br>
@@ -60,9 +59,11 @@
 	<br>
 	<br>
 	<br>
-    </main>
-	<footer><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>
-</footer>
+	</section>
+
+	<section class="license">	
+	<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.	
+    </section>
+	</main>
   </body>
-</center>
 </html>
