--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
 			<span class="path"><a class="home-link" href="contact/">contact</a></span><br>
 			<span class="path"><a class="home-link" href="blog/">blog</a></span><br>
 		</div>
-
-		<h1 class="home-h1"><a class="home-link" href="#">EMLAR.xyz</a></h1>
+		<h1 class="home-h1"><a class="home-link" href="/">EMLAR.xyz</a></h1>
 	
 		<footer class="home-f">
 
 			<div><p>I am a GNU/Linux and free software enthusiast and a beginner photographer and programmer.</p></div>
 			<div><p>This site is for sharing my photos and some ideas or thoughts in my blog. </p></div>
-
+			<div id="webring">
+				<a href="https://hotlinewebring.club/emlar/previous/" class="wr-1">⟵</a>
+				<a href="https://hotlinewebring.club" class="wr-2"> Hotline Webring </a>
+				<a href="https://hotlinewebring.club/emlar/next/" class="wr-1">⟶</a>
+			</div>
 		</footer>
-
-	
 	</main>
   </body>
 </html>
