--- a/photography/index.html
+++ b/photography/index.html
@@ -5,8 +5,7 @@
     <title>Emlar - Photography</title>
     <html lang="en">
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="image/png" href="/emlar2.png"/>
-    <link rel="stylesheet" href="../css/main.css"/>
+    <link rel="stylesheet" href="/css/main.css"/>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
@@ -17,7 +16,7 @@
 			<span class="path"><a class="home-link" href="/blog/">blog</a></span><br>
 		</div>
 	<br>
-		<div class="Names"><a href="/" class=".Names"<b>Emlar.xyz</b></a> - Photography </div>
+		<div class="Names"><a href="/" class="Names"<b>Emlar.xyz</b></a> - Photography </div>
 		<br><br><br>
 	<section>
 	<ul class="list">
