current version of the website
replacing the ancient files that i had here on github 😈

--- a/content/schools-foss/alternatives/index.html
+++ b/content/schools-foss/alternatives/index.html
@@ -1,18 +1,19 @@
 <DOCTYPE html>
 <html>
   <head>
-    <title>emlar.xyz</title>
+    <title>Free software alternatives for schools - Emlar.xyz</title>
     <html lang="en">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/main.css"/>
+    <link rel="icon" href="/emlar.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
     <main>
     <div class="paths-s">
-			<span><a class="home-link" href="/photography/">photography</a></span><br>
+			<span><a class="home-link" href="/content/">content</a></span><br>
 			<span><a class="home-link" href="/contact/">contact</a></span><br>
-			<span><a class="home-link" href="/blog/">blog</a></span><br>
+			<span><a class="home-link" href="/rss/">rss</a></span><br>
 	</div>    
 	<br>
 		<div class="Names"><a href="/" class="Names"<b>Emlar.xyz</b></a> - Blog </div>
