--- a/content/schools-foss/index.html
+++ b/content/schools-foss/index.html
@@ -1,24 +1,27 @@
 <DOCTYPE html>
 <html>
   <head>
-    <title>emlar.xyz</title>
+    <title>Schools and free softwre - emlar.xyz</title>
+    <meta name="description" content="Why do most schools use propietary software? What are the reasons to use free software?">
     <html lang="en">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/main.css"/>
+    <link rel="icon" href="/emlar.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
     <main>
 		<div class="paths-s">
-			<span class="path"><a class="home-link" href="/photography/">photography</a></span><br>
+			<span class="path"><a class="home-link" href="/content/">content</a></span><br>
 			<span class="path"><a class="home-link" href="/contact/">contact</a></span><br>
-			<span class="path"><a class="home-link" href="/blog/">blog</a></span><br>
+			<span class="path"><a class="home-link" href="/rss/">rss</a></span><br>
 		</div>
 		<br>
 		<div class="Names"><a href="/" class="Names"<b>Emlar.xyz</b></a> - Blog </div>
 		<br><br><br>
 		<article>
 			<h3> Schools and Free Software </h3>
+			<h4><i>28.02.22</i></h4>
 			<p>
 			Most schools use propietary software for everything, there are some exeptions but those are usually accidental. I don't know about the situation in other countries so I will write about what I see in Estonia.
 			<br>
@@ -33,7 +36,7 @@ By forcing students to use propietary software at school they are locking the st
 			Why do schools prefer propietary software? I assume that it's because they don't know about the flaws of propietary software and for them it's easier to use it because they are probably more familiar with it. Using free/libre software in schools requires some effort from the school so it is very easy for them to go the easy route and use Google, Windows, Zoom. Windows comes preinstalled, setting up Google Services for school is simple, using FOSS alternatives often requires you to host them on a server (Not strictly necessary as it is possible to use public instances).
 			<br>
 			<br>
-			Cost? A lot of propietary software has some kind of a cost - usually a subscription or a license. Free (as in freedom) software is usually also free as in gratis but hosting the software on a server would require the school to pay for a VPS or for electricity and internet if hosting it on their own server. VPSs aren't usually very expensive so I don't think it would be a lot more expensive for schools to use free software. With the servers there would also come some other expenses.
+			Cost? A lot of propietary software has some kind of a cost - usually a subscription or a license. Free (as in freedom) software is usually also free as in gratis but hosting the software on a server would require the school to pay for a VPS or for electricity and internet if hosting it on their own server. VPSs aren't usually very expensive so I don't think it would be a lot more expensive for schools to use free software. With the servers there would also come some other expenses. Overall the cost would probably be similiar.
 			<br>
 			<br>
 			Should a school prefer convenience over the freedom and privacy of it's students?
