--- a/content/summer2022/prev.html
+++ b/content/summer2022/prev.html
@@ -6,6 +6,7 @@
     <html lang="en">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/main.css"/>
+    <link rel="icon" href="/emlar.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
@@ -20,34 +21,34 @@
 		<br><br><br> 
         <section>
 		<article>
+		<h3>Summer 2022</h3>
 		<p>
-		This is a photo project I originally did for school. The goal was to photograph lonely places in Tallinn on film. All of the photos were shot on 35mm film in 2020.
-		<br>
-		 As a part of the project I learned to develop film and make darkroom prints. I took a lot more photos but here is a selection.
+		I spent most of this summer at my summer house. While I was there I had plenty of time to walk around in the surrounding area, either with my dog or alone. During these walks I usually had my camera with me and I sometimes took photos of the beautiful landscapes.
 		</p>
 		</article>
 		<br>
-		<img src="/fotod/maja-lasnamael.jpg" alt="[A house]" class="Photos"><br>
+		<img src="/fotod/suvi22/suvi1.jpg" class="Photos4-3"><br>
 		<br>
 		<br>
-		<img src="/fotod/autod-ja-hauakivid.jpg" alt="[Cars and tombstones]" class="Photos"><br>
+		<img src="/fotod/suvi22/suvi2.jpg" class="Photos4-3"><br>
 		<br>
 		<br>
-		<img src="/fotod/polenud-maja.jpg" alt="[A burnt house]" class="Photos"><br>
+		<img src="/fotod/suvi22/suvi3.jpg" class="Photos4-3"><br>
 		<br>
 		<br>
-		<img src="/fotod/uksikmaja.jpg" alt="[A lonely house]" class="Photos"><br>
+		<img src="/fotod/suvi22/suvi4.jpg" class="Photos4-3"><br>
 		<br>
 		<br>
-		<img src="/fotod/pizza.jpg" alt="[Pizza]" class="Photos"><br>
+		<img src="/fotod/suvi22/suvi5.jpg" class="Photos4-3"><br>
 		<br>
 		<br>
-		<img src="/fotod/istuja.jpg" alt="[A woman in an empty cafe]" class="Photos"><br>
+		<img src="/fotod/suvi22/suvi6.jpg" class="Photos4-3"><br>
 		<br>
 		<br>
-		<img src="/fotod/varav.jpg" alt="[A gate]" class="Photos"><br>
+		<img src="/fotod/suvi22/suvi7.jpg" class="Photos4-3"><br>
 		<br>
 		<br>
+
 	</section>
 	<section>
 	<br>
