--- a/index.html
+++ b/index.html
@@ -4,29 +4,21 @@
     <title>emlar.xyz</title>
     <html lang="en">
     <meta charset="UTF-8">
-    <!-- NEW LOGO NECESSARY <link rel="shortcut icon" type="image/png" href="emlar2.png"/> -->
     <link rel="stylesheet" href="css/main.css"/>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-  </head>
+    <meta name="author" content="Emil">
+    <link rel="icon" href="/emlar.png" type="image/x-icon">
+    <meta name="description" content="I am a GNU/Linux and free software enthusiast and a beginner photographer and programmer."> 
+ </head>
   <body>
 	<main class="home">
 		<div class="paths">
-			<span class="path"><a class="home-link" href="photography/">photography</a></span><br>
-			<span class="path"><a class="home-link" href="contact/">contact</a></span><br>
-			<span class="path"><a class="home-link" href="blog/">blog</a></span><br>
+		<span class="path"><a class="home-link" href="content/">content</a></span><br>
+		<span class="path"><a class="home-link" href="contact/">contact</a></span><br>
+		<!-- <span class="path"><a class="home-link" href="blog/">blog</a></span><br> -->
+		<span class="path"><a class="home-link" href="rss/">rss</a><span>
 		</div>
 		<h1 class="home-h1"><a class="home-link" href="/">EMLAR.xyz</a></h1>
-	
-		<footer class="home-f">
-
-			<div><p>I am a GNU/Linux and free software enthusiast and a beginner photographer and programmer.</p></div>
-			<div><p>This site is for sharing my photos and some ideas or thoughts in my blog. </p></div>
-			<div id="webring">
-				<a href="https://hotlinewebring.club/emlar/previous/" class="wr-1">⟵</a>
-				<a href="https://hotlinewebring.club" class="wr-2"> Hotline Webring </a>
-				<a href="https://hotlinewebring.club/emlar/next/" class="wr-1">⟶</a>
-			</div>
-		</footer>
 	</main>
   </body>
 </html>
