--- a/contact/index.html
+++ b/contact/index.html
@@ -6,23 +6,26 @@
     <html lang="en">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/main.css"/>
+    <link rel="icon" href="/emlar.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
     <main>
 		<div class="paths-s">
-			<span class="path"><a class="home-link" href="/photography/">photography</a></span><br>
+			<span class="path"><a class="home-link" href="/content/">content</a></span><br>
 			<span class="path"><a class="home-link" href="/contact/">contact</a></span><br>
-			<span class="path"><a class="home-link" href="/blog/">blog</a></span><br>
+			<span class="path"><a class="home-link" href="/rss/">rss</a></span><br>
 		</div>
 		<br>
 		<div class="Names"><a href="/" class="Names"<b>Emlar.xyz</b></a> - Contact </div>
 		<br><br><br>
 	<section class="list">
-		<div><b>Email</b> - <u>emilarro@protonmail.com</u></div>
 		<div><b>Github</b> - <a href="https://github.com/emilarr">Emilarr</a></div>
-		<div><b>Matrix</b> - <u>@emlar:matrix.org</u></div> </br>
-		</br>
+		<div><b>Matrix</b> - <u>@emlar:matrix.org</u></div>
+<!--
+		<div><b>NotABug</b> - <a href="https://notabug.org/emlar">Emlar</a></div>
+-->
+		</br></br>
 	</section>
     </main>
   </body>
